--- a/css/interests.css
+++ b/css/interests.css
@@ -1,5 +1,8 @@
 .page-interests {
-    background: url('https://raw.githubusercontent.com/HumzaProfessional/MyPortfolio.github.io/main/Images/cubes.jpeg') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/HumzaProfessional/MyPortfolio.github.io/main/Images/colorful_cubes.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white; /* Optional: Ensure text is readable */
+    min-height: 100vh; /* Ensure the background covers the full page */
+    margin: 0;
+    padding: 20px;
 }
