--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,9 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     <!-- Link to the global CSS file -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/index.css">
-    <!-- Conditionally load interests.css for Interests page -->
-    {% if page.title == "Interests" %}
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/interests.css">
-    {% endif %}
 </head>
 
+<!-- Dynamic class added to the body -->
 <body class="page-{{ page.title | downcase }}">
     <!-- Header Section -->
     <header>
